# macos-ui-automation-mcp

./: codecov.yml  mcp_server_wrapper.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/integrations/: pytest_integration.py
scripts/: release.py
src/macos_ui_automation/bridges/: factory.py  fake_bridge.py  real_bridge.py
src/macos_ui_automation/core/: actions.py  elements.py  state.py
src/macos_ui_automation/interfaces/: cli.py  mcp_server.py
src/macos_ui_automation/models/: types.py
tests/bridges/: test_fake.py
tests/fixtures/: task_management_system.py
tests/integration/: test_mcp_integration.py
tests/models/: test_types.py
